--- a/Whiscode/Whiscode/ClientApp/src/app/top-menu/top-menu.component.scss
+++ b/Whiscode/Whiscode/ClientApp/src/app/top-menu/top-menu.component.scss
@@ -6,6 +6,7 @@
 
 header {
   padding: 5vh 5vw 0;
+  height: 5vh;
 
   nav {
     display: flex;
